display buttons correctly on mobile

--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,16 @@ body {
 .container {
   display: flex;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
+  padding: 8px;
   justify-content: center;
   align-items: center;
   background: #ff5e5b;
 }
 
 .calculator {
-  width: 500px;
+  min-width: 375px;
+  max-width: 500px;
   height: 600px;
   border: 3px solid black;
   border-radius: 5px;
